apps/local/update-service/backend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update-service-backend
spec:
  template:
    spec:
      containers:
        - name: backend
          imagePullPolicy: Never # this will pull the image from the local repository
