apps/local/update-service/frontend-deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: update-service-frontend
spec:
  template:
    spec:
      containers:
        - name: frontend
          imagePullPolicy: Always
