apps/local/update-service/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
    - name: traefik-gateway
      sectionName: http
  hostnames:
    - api.update-service.dhd.intranet
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /admin
        - path:
            type: PathPrefix
            value: /releases
        - path:
            type: PathPrefix
            value: /v1
      backendRefs:
        - name: update-service
